# HT_20_Scrapy

./: .travis.yml  pyproject.toml
scrapy_workua/scrapy_workua/: items.py  settings.py
scrapy_workua/scrapy_workua/spiders/: workua.py
